--- a/qtfuzzylite/ui/Configuration.ui
+++ b/qtfuzzylite/ui/Configuration.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>285</width>
-    <height>309</height>
+    <width>289</width>
+    <height>335</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -15,6 +15,11 @@
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
+  </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Configuration</string>
@@ -171,12 +176,6 @@
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <property name="horizontalSpacing">
-       <number>0</number>
-      </property>
-      <property name="verticalSpacing">
-       <number>6</number>
-      </property>
       <property name="leftMargin">
        <number>12</number>
       </property>
@@ -185,6 +184,12 @@
       </property>
       <property name="bottomMargin">
        <number>12</number>
+      </property>
+      <property name="horizontalSpacing">
+       <number>0</number>
+      </property>
+      <property name="verticalSpacing">
+       <number>6</number>
       </property>
       <item row="0" column="0">
        <widget class="QCheckBox" name="ckx_not">
