--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -22,6 +22,11 @@
     <height>0</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>qtfuzzylite</string>
   </property>
@@ -54,7 +59,7 @@
          <x>0</x>
          <y>0</y>
          <width>613</width>
-         <height>491</height>
+         <height>499</height>
         </rect>
        </property>
        <attribute name="label">
@@ -354,7 +359,7 @@
          <x>0</x>
          <y>0</y>
          <width>613</width>
-         <height>491</height>
+         <height>499</height>
         </rect>
        </property>
        <attribute name="label">
@@ -428,8 +433,8 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>289</width>
-                     <height>124</height>
+                     <width>293</width>
+                     <height>128</height>
                     </rect>
                    </property>
                    <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -524,8 +529,8 @@
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>289</width>
-                     <height>124</height>
+                     <width>292</width>
+                     <height>128</height>
                     </rect>
                    </property>
                    <layout class="QVBoxLayout" name="verticalLayout_13">
