--- a/qtfuzzylite/ui/resources.qrc
+++ b/qtfuzzylite/ui/resources.qrc
@@ -16,5 +16,6 @@
     <file>icons/edit_add.png</file>
     <file>icons/edit_remove.png</file>
     <file>icons/pencil.png</file>
+    <file>icons/donate.gif</file>
   </qresource>
 </RCC>
